--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^0.0.58",
+    "@langchain/community": "^0.3.1",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
@@ -31,6 +32,7 @@
     "nanoid": "^5.0.7",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
+    "pdf-parse": "^1.1.1",
     "postgres": "^3.4.4",
     "react": "^18",
     "react-dom": "^18",
@@ -51,6 +53,6 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.15.7",
-    "typescript": "^5"
+    "typescript": "^5.6.2"
   }
 }
